issues/MIR-1185 sets input color to project text color to increase contrast between placeholder and input text

--- a/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/variables.scss
+++ b/mir-layout/src/main/resources/META-INF/resources/mir-layout/scss/common/variables.scss
@@ -21,3 +21,4 @@ $alert-warning-text: $brand-warning !default;
 
 $body-color:          #212529 !default;
 $close-color:         $body-color !default;
+$input-color:         $body-color !default;
